<resources>
    <!-- Generic Strings -->
    <string name="app_name">Tantarian</string>
    <string name="welcome">Welcome to <b>Tantarian</b></string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="user_dashboard">User Dashboard</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="search">Search</string>
    <string name="not_applicable">N/A</string>

    <!-- Sign Up / Log In -->
    <string name="login">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="request_sign_up">No Account? Sign Up!</string>
    <string name="continue_without_login">Continue without login</string>
    <string name="request_user_login">Welcome!</string>
    <string name="create_account">Create an Account</string>
    <string name="register_user">Sign Up!</string>
    <string name="user_not_logged_in">User Not Logged In</string>

    <!-- Password -->
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password_header">Reset Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_subtext1">Forgot your password?</string>
    <string name="forgot_password_subtext2">Let\'s fix that...</string>
    <string name="reset_password">Reset Password</string>

    <!-- User Profile -->
    <string name="profile">Profile</string>
    <string name="user_profile">Welcome Back!</string>
    <string name="account">Account</string>
    <string name="user_profile_avatar">User Avatar</string>
    <string name="member_since">Member Since</string>
    <string name="favorite_books">Favorites</string>
    <string name="edit_profile">Edit Your Profile</string>

    <!-- Buttons -->
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="view_more">View More</string>
    <string name="update_profile">Update Profile</string>

    <!-- Categories -->
    <string name="category">Category</string>
    <string name="category_name">Category Name</string>
    <string name="category_title">Category Title</string>
    <string name="add_category">+ Add Category</string>
    <string name="add_new_category">Add a New Category</string>
    <string name="save_changes">Save Changes</string>

    <!-- Books -->
    <string name="books">Books</string>
    <string name="book_title">Title</string>
    <string name="book_description">Description</string>
    <string name="book_category">Category/Genre</string>
    <string name="file_size">File Size</string>
    <string name="date_format">mm/yyyy</string>
    <string name="downloads">Downloads</string>
    <string name="views">Views</string>
    <string name="date">Date</string>

    <string name="add_new_book">Add a New Book</string>
    <string name="upload_pdf">Upload Pdf</string>
    <string name="attached_successfully">👍 Pdf Attached!</string>
    <string name="download">Download</string>

    <string name="book_details">Details</string>
    <string name="edit_book">Edit Book</string>
    <string name="read">Read</string>
    <string name="reading_book">Tantarian Reader</string>
    <string name="pages">Pages</string>
    <string name="pages_placeholder">-/-</string>

    <!-- Favorites -->
    <string name="deselect_favorite">Remove from Favorites</string>
    <string name="your_favorites">Your Favorites...</string>
    <string name="favorite">Favorite</string>

    <string name="blank_fragment">Blank fragment. Take Me to Your Leader! 👽 </string>
    <string name="tablayout_content_description">Book Category Tabs Toolbar</string>
    <string name="user_books_viewpager">User Books ViewPager</string>
</resources>
