<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="@color/black"
    app:cardCornerRadius="5dp"
    app:cardElevation="0dp"
    app:contentPadding="5dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/pdfRl"
            android:layout_width="110dp"
            android:layout_height="140dp"
            android:layout_marginEnd="20dp"
            android:background="@color/gray03" >

            <com.github.barteksc.pdfviewer.PDFView
                android:id="@+id/pdfView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray03" />
        </RelativeLayout>

        <TextView
            android:id="@+id/titleTv"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/removeFavoriteBtn"
            android:layout_toEndOf="@id/pdfRl"
            android:maxLines="1"
            android:text="@string/book_title"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/removeFavoriteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_favorite_white"
            app:tint="@color/white"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:contentDescription="@string/deselect_favorite"/>

        <TextView
            android:id="@+id/descriptionTv"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTv"
            android:layout_toEndOf="@id/pdfRl"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/book_description"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/categoryTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/category"
            android:textColor="@color/white"
            android:maxLines="1" />

        <TextView
            android:id="@+id/sizeTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/pdfRl"
            android:layout_alignParentBottom="true"
            android:text="@string/file_size"
            android:textColor="@color/white"
            android:maxLines="1" />

        <TextView
            android:id="@+id/dateTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/categoryTv"
            android:layout_toEndOf="@id/sizeTv"
            android:layout_alignParentBottom="true"
            android:text="@string/date_format"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>