<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    app:cardElevation="0dp"
    app:contentPadding="5dp"
    app:cardBackgroundColor="@color/black"
>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        android:layout_marginBottom="12dp"
        android:background="@color/black"
    >
        <RelativeLayout
            android:id="@+id/pdfRl"
            android:layout_width="110dp"
            android:layout_height="140dp"
            android:layout_marginEnd="20dp"
            android:background="@color/gray02"
        >
            <com.github.barteksc.pdfviewer.PDFView
                android:id="@+id/pdfView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <!-- Progress Bar -->
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>

        <TextView
            android:id="@+id/titleTv"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/moreBtn"
            android:layout_toEndOf="@id/pdfRl"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/book_title"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionTv"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTv"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/pdfRl"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/book_description"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/categoryTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="8dp"
            android:maxLines="1"
            android:text="@string/category"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/sizeTv"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/pdfRl"
            android:maxLines="1"
            android:text="@string/file_size"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/dateTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="6dp"
            android:layout_toStartOf="@id/categoryTv"
            android:layout_toEndOf="@id/sizeTv"
            android:maxLines="1"
            android:text="@string/date_format"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/moreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:src="@drawable/ic_view_more_white"
            android:background="@android:color/transparent"
            android:contentDescription="@string/view_more" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>