<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCategoryActivity"
    android:background="@drawable/back01"
    >

    <!-- Toolbar -->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/shape_toolbar01"
    >

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:src="@drawable/ic_back_white"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back" />

        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/backBtn"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:padding="6dp"
            android:fontFamily="sans-serif-black"
            android:textSize="18sp"
            android:text="@string/add_new_category"
            android:textColor="@color/black"
            android:scrollbarSize="28sp" />
    </RelativeLayout>

        <!-- Text Input for Category -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/categoryTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="275dp"
            app:hintEnabled="false"
        >

            <EditText
                android:id="@+id/categoryEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="false"
                android:background="@drawable/shape_edittext01"
                android:drawableStart="@drawable/ic_category_gray"
                android:drawablePadding="10dp"
                android:hint="@string/category_title"
                android:inputType="textPersonName|textCapSentences"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray01" />
        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/categoryTil"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_button01"
        android:text="@string/submit"
        android:textColor="@color/black"
        android:textStyle="bold" />
</RelativeLayout>