<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".profile.ProfileActivity" >

    <View
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:background="@drawable/back02" />

    <!-- Toolbar -->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/profile"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_back_black" />

        <TextView
            android:id="@+id/toolbarTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:text="@string/user_profile"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/editProfileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_edit_black" />

    </RelativeLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileIv"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:background="@drawable/shape_edittext01"
        android:backgroundTint="@color/peach_200"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_profile_black" />

    <TextView
        android:id="@+id/nameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileIv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/emailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameTv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />
    
    <LinearLayout
        android:id="@+id/detailsLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/emailTv"
        android:layout_marginTop="20dp"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/account"
                android:textColor="@color/teal_200"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/privilegeTypeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_applicable"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/member_since"
                android:textColor="@color/teal_200"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/signupDateTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_applicable"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/favorite_books"
            android:textColor="@color/teal_200"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/favoritesCountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_applicable"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/favoriteView"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/detailsLl"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/gray03" />

    <!-- Label -->
    <TextView
        android:id="@+id/favoritesLabelTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/favoriteView"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/your_favorites"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoritesRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/favoritesLabelTv"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/row_favorites" />

</RelativeLayout>